@@ -6,6 +6,7 @@
 #include "growing-buffer.h"
 #include "header-writer.h"
 #include "lease.h"
+#include "direct.h"
 
 #include <inline/compiler.h>
 
@@ -411,6 +412,7 @@ int main(int argc, char **argv) {
 
     signal(SIGPIPE, SIG_IGN);
 
+    direct_global_init();
     event_base = event_init();
 
     pool = pool_new_libc(NULL, "root");
@@ -430,4 +432,5 @@ int main(int argc, char **argv) {
     pool_recycler_clear();
 
     event_base_free(event_base);
+    direct_global_deinit();
 }
